# src/main/java/com/societyfy/notification/entity/Notification.java
@@ -2,12 +2,17 @@ package com.societyfy.notification.entity;
 
 import jakarta.persistence.*;
 import lombok.*;
+import org.hibernate.proxy.HibernateProxy;
 
+import java.util.Objects;
 import java.util.UUID;
 
 @Getter
 @Setter
 @ToString
+@RequiredArgsConstructor
+@AllArgsConstructor
+@NoArgsConstructor
 @Entity
 @Table(name = "notification")
 public class Notification extends CommonDateFields {
@@ -19,6 +24,9 @@ public class Notification extends CommonDateFields {
             unique = true,
             nullable = false)
     String title;
+
+    @Column(name = "event_type", unique = true, nullable = false)
+    String eventType;
 
     @Column(name = "message")
     String message;
